--- a/core/static/core/main.css
+++ b/core/static/core/main.css
@@ -61,11 +61,6 @@ body {
 
 
 
-/* ------------------------------------------------------------------------------ Testimonials */
-
-
-
-
 /* -------------------------------------------------------------------------------Barbershop page */
 
 
@@ -115,4 +110,16 @@ body {
     width: 125px;
     margin-right: 20px;
     margin-bottom: 16px;
+}
+
+/* ------------------------------------------------------------------------ add_testimonial page */
+
+#reviews-container {
+    height: fit-content;
+    width: fit-content;
+    padding: 50px;
+    margin: 20px;
+    background-color: (0, 0, 0, 0.5);
+    border: 4px solid white;
+    border-radius: 25px;
 }
