--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -12,6 +12,9 @@
         content="Barbershop, Tattoo Parlor, Inked Clipers, haircut, Tattoo, Fade, Ennis, Code Institute, Django, Bootstrap, Dylan Mc Mahon">
     <meta name="author" content="Dylan Mc Mahon">
     <title>Inked Clippers Barbershop &amp; Tattoo Parlor</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://res.cloudinary.com/dylanp400/image/upload/f_auto,q_auto/jivi9rvyd5qe4bndnwls"
+        type="image/x-icon">
     <!--Bootstrap 5 CDN link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
