--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -6,7 +6,7 @@
     <div id="profile-container">
         <div class="row">
             <div class="col-6">
-                <img class="rounded-circle account-img" src="{{ user.profile.image.url }}" alt="">
+                <img class="rounded-circle account-img" src="{{ user.profile.image.url }}" alt="User profile image">
             </div>
             <div class="col-6">
                 <p class="text-white account-heading">Username:<span class="text-secondary">
