--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -18,7 +18,7 @@
     <!--Bootstrap 5 CDN link-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'core/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'core/main.css' %}">
     <!--script for fontawesome-->
     <script src="https://kit.fontawesome.com/aed26dd8dc.js" crossorigin="anonymous"></script>
 </head>
