Add back to top button

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -102,7 +102,7 @@
             </div>
         </div>
     </nav>
-
+    <a class="back-to-top" href="#" aria-label="Back to top button"><i class="fa-sharp fa-solid fa-circle-up"></i></a>
 
     <!--If statement & for loop to display messages-->
     {% if messages %}
