--- a/static/core/main.css
+++ b/static/core/main.css
@@ -39,10 +39,6 @@ body {
     height: 100dvh;
 }
 
-.reviews-btn {
-    display: flex;
-    justify-content: center;
-}
 
 #down-icon {
     font-size: 60px;
@@ -122,4 +118,28 @@ body {
     background-color: (0, 0, 0, 0.5);
     border: 4px solid white;
     border-radius: 25px;
+}
+
+/* -------------------------------------------------------------------------- back to top button */
+
+.back-to-top {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    background: rgb(33, 37, 31);
+    color: black;
+    bottom: 30px;
+    right: 30px;
+    color: white;
+    text-align: center;
+    line-height: 50px;
+    font-size: 32px;
+    border-radius: 25px;
+    z-index: 2;
+}
+
+.back-to-top:hover {
+    background-color: green;
+    color: black;
+    font-size: 35px;
 }
