--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -47,10 +47,7 @@
                         <a class="nav-link text-white" aria-current="page" href="{% url 'barbers-page' %}">Barbers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="">Tattoo</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="">Products</a>
+                        <a class="nav-link text-white" href="{% url 'tattoo-page' %}">Tattoo</a>
                     </li>
                     {% else %}
                     <li class="nav-item">
@@ -63,10 +60,7 @@
                         <a class="nav-link text-white" aria-current="page" href="{% url 'barbers-page' %}">Barbers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="">Tattoo</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="">Products</a>
+                        <a class="nav-link text-white" href="{% url 'tattoo-page' %}">Tattoo</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -114,7 +108,7 @@
     {% endif %}
     {% block content %}{% endblock %}
     <!--Contact details and opening times-->
-    <footer>
+    <footer class="mt-5">
         <div class="container-fluid align-content-center">
             <div class="row bg-dark">
                 <div class="col-lg-3 my-4">
