Add FAQ's with tattoo and aftercare information

--- a/core/templates/core/tattoo.html
+++ b/core/templates/core/tattoo.html
@@ -95,30 +95,87 @@
             </table>
         </div>
     </div>
-    <section>
-        <div class="container-fluid my-md-3">
-            <div class="row bg-dark m">
-                <div class="col-12">
-                    <h2 class="text-white text-center my-3" id="meet-the-team">Tattoo Artist &amp Piercer</h2>
+</section>
+<section>
+    <div class="container-fluid my-md-3">
+        <div class="row bg-dark m">
+            <div class="col-12">
+                <h2 class="text-white text-center my-3" id="meet-the-team">Tattoo Artist &amp; Piercer</h2>
+            </div>
+        </div>
+
+        <div class="row lg-justify-content-evenly g-3">
+            {% for member in members %}
+            <!--For loop to display all the team members to the site-->
+            <div class="col-md-6">
+                <div class="card border-3 mx-md-5">
+                    <div class="card-header text-center bg-dark text-white fw-bold">{{ member.name }}</div>
+                    <img src="{{ member.image.url }}" class="tattoo-team-img" alt="...">
+                    <div class="card-body bg-dark">
+                        <h4 class="text-white text-center fs-6"><u>{{ member.role }}</u></h4>
+                        <p class="card-text text-white fs-6 text-center">{{ member.bio }}</p>
+                    </div>
                 </div>
             </div>
+            {% endfor %}
+        </div>
+    </div>
+</section>
 
-            <div class="row lg-justify-content-evenly g-3">
-                {% for member in members %}
-                <!--For loop to display all the team members to the site-->
-                <div class="col-md-6">
-                    <div class="card border-3 mx-md-5">
-                        <div class="card-header text-center bg-dark text-white fw-bold">{{ member.name }}</div>
-                        <img src="{{ member.image.url }}" class="tattoo-team-img" alt="...">
-                        <div class="card-body bg-dark">
-                            <h4 class="text-white text-center fs-6"><u>{{ member.role }}</u></h4>
-                            <p class="card-text text-white fs-6 text-center">{{ member.bio }}</p>
+<h2 class="text-white text-center my-4">Inked Clippers FAQ's</h2>
+<section class="container border-3">
+    <div class="row my-3">
+        <div class="col-md-6">
+            <h3 class="text-white">Questions about getting Tattoos</h3>
+            <p class="text-white">Here are some of the frequently asked questions about getting a tattoo.</p>
+            <div class="accordion">
+                {% for question in questions %}
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseQuestion{{ question.id }}" aria-expanded="false"
+                            aria-controls="collapseQuestion{{ question.id }}">
+                            <span class="fw-semibold">{{ question.question }}</span>
+                        </button>
+                    </h2>
+                    <div id="collapseQuestion{{ question.id }}" class="accordion-collapse collapse"
+                        data-bs-parent=".accordion">
+                        <div class="accordion-body mb-3">
+                            <span class="text-dark">{{ question.answer|linebreaksbr }}</span>
                         </div>
                     </div>
                 </div>
                 {% endfor %}
             </div>
         </div>
-    </section>
+        <div class="col-md-6">
+            <h3 class="text-white text-end d-none d-md-block">Aftercare FAQ's</h3>
+            <h3 class="text-white text-end d-block d-md-none mt-3">Aftercare FAQ's</h3>
 
-    {% endblock content %}
+            <p class="text-white text-end">Here are some of the frequently asked questions about tattoo
+                aftercare.</p>
+            <div class="accordion">
+                {% for questions in aftercare_questions %}
+                <div class="accordion-item">
+                    <h2 class="accordion-header">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#collapseAftercare{{ questions.id }}" aria-expanded="false"
+                            aria-controls="collapseAftercare{{ questions.id }}">
+                            <span class="fw-semibold">{{ questions.question }}</span>
+                        </button>
+                    </h2>
+                    <div id="collapseAftercare{{ questions.id }}" class="accordion-collapse collapse"
+                        data-bs-parent=".accordion">
+                        <div class="accordion-body">
+                            <span class="text-dark">{{ questions.answer|linebreaksbr }}</span>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</section>
+
+
+{% endblock content %}
