--- a/static/core/main.css
+++ b/static/core/main.css
@@ -119,6 +119,11 @@ body {
     border-radius: 25px;
 }
 
+.reviews-btn {
+    display: flex;
+    justify-content: center;
+}
+
 /* -------------------------------------------------------------------------- back to top button */
 
 .back-to-top {
