Add background colour

--- a/core/templates/core/barbers.html
+++ b/core/templates/core/barbers.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<section class="container my-5">
+<section class="container-fluid my-5 blk-bkround">
     <div class="row">
         <div class="col">
             <table class="table-borderless table-services text-center">
