--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -55,7 +55,7 @@
 <!--Location-->
 <section>
     <div class="container-fluid mb-5">
-        <div class="row bg-dark">
+        <div class="row">
             <div class="col-lg-12">
                 <h2 class="text-white text-center my-4 ms-5"><i class="fa-solid fa-location-dot"></i>
                     Location</h2>
