--- a/core/templates/core/tattoo.html
+++ b/core/templates/core/tattoo.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <h1 class="text-white text-center mt-4">Prices for Piercings</h1>
-<section class="container-fluid mb-md-3">
+<section class="container-fluid mb-md-3 blk-bkround">
     <div class="row mx-md-5">
         <div class="col-md-6 py-2">
             <table class="table-borderless table-services text-center border-bottom">
@@ -50,7 +50,7 @@
         </div>
     </div>
 </section>
-<section class="container-fluid mb-md-3">
+<section class="container-fluid mb-md-3 blk-bkround">
     <div class="row mx-md-5">
         <div class="col-md-6 py-2">
             <table class="table-borderless table-services text-center border-bottom">
@@ -98,7 +98,7 @@
 </section>
 <section>
     <div class="container-fluid my-md-3">
-        <div class="row bg-dark m">
+        <div class="row">
             <div class="col-12">
                 <h2 class="text-white text-center my-3" id="meet-the-team">Tattoo Artist &amp; Piercer</h2>
             </div>
@@ -123,7 +123,7 @@
 </section>
 
 <h2 class="text-white text-center my-4">Inked Clippers FAQ's</h2>
-<section class="container border-3">
+<section class="container-fluid border-3 blk-bkround">
     <div class="row my-3">
         <div class="col-md-6">
             <h3 class="text-white">Questions about getting Tattoos</h3>
