--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -10,7 +10,7 @@
                 <h1 class="text-white fs-1">Precision Cuts, Timeless Tattoos</h1>
                 <h2 class="text-white fs-2">Unleash Your Style at Inked
                     Clippers!</h2>
-                <a href="#meet-the-team"><i class="fa-solid fa-chevron-down fa-beat" id="down-icon"></i></a>
+                <a href="#Testimonials"><i class="fa-solid fa-chevron-down fa-beat" id="down-icon"></i></a>
             </div>
         </div>
     </div>
@@ -19,7 +19,7 @@
 <!--Testimonials-->
 
 <section>
-    <h3 class="text-center text-white mt-3">Testimonials</h3>
+    <h3 class="text-center text-white mt-3" id="Testimonials">Testimonials</h3>
     <hr class="text-white">
     <div class="container-fluid my-3">
         <div class="row">
@@ -34,8 +34,9 @@
                             </p>
                             <p class="fw-light"><span class="fw-bold">Inked Clippers -</span>
                                 {{ user_testimonial.service }}</p>
-                            <p><i class="fa-solid fa-quote-left"></i> {{ user_testimonial.review }} <i
-                                    class="fa-solid fa-quote-right"></i></p>
+                            <p class="txt-none"><i class="fa-solid fa-quote-left"></i><a
+                                    href="{% url 'testimonials-detail' user_testimonial.pk %}" class="txt-none">
+                                    {{ user_testimonial.review }}</a><i class="fa-solid fa-quote-right"></i></p>
                             <small class="fw-light">Review by - {{ user_testimonial.user.username }}</small>
                         </li>
                         {% endfor %}
