--- a/core/templates/core/usertestimonial_detail.html
+++ b/core/templates/core/usertestimonial_detail.html
@@ -28,10 +28,12 @@
         </div>
     </div>
     <div class="reviews-btn">
-        {% if user.is_authenticated %}
-        <a href="{% url 'testimonial-page' %}" class="btn btn-success mb-4">Add Testimonial</a>
+        {% if user.is_authenticated and user == object.user %}
+        <a href="{% url 'edit-testimonial-page' object.pk %}" class="btn btn-success mb-4">Edit
+            Testimonial</a>
+        <a href="{% url 'delete-testimonial-page' object.pk %}" class="btn btn-danger mb-4">Delete
+            Testimonial</a>
         {% endif %}
-
     </div>
 </section>
 
