Fixed styling errors & spelling mistakes

--- a/core/templates/core/barbers.html
+++ b/core/templates/core/barbers.html
@@ -2,9 +2,10 @@
 {% load static %}
 
 {% block content %}
-<section class="container-fluid my-5 blk-bkround">
+<section class="container-fluid mb-5 blk-bkround">
     <div class="row">
         <div class="col">
+            <h1 class="text-white text-center my-3">Prices For Barber Services</h1>
             <table class="table-borderless table-services text-center">
                 <thead>
                     <tr>
@@ -31,7 +32,7 @@
     <div class="container-fluid">
         <div class="row bg-dark">
             <div class="col-12">
-                <h2 class="text-white text-center my-3" id="meet-the-team">Meet the Barbers</h2>
+                <h2 class="text-white text-center my-5" id="meet-the-team">Meet the Barbers</h2>
             </div>
         </div>
         <div class="row lg-justify-content-evenly g-3">
