--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -6,7 +6,7 @@
     <div class="container-fluid image-container">
         <div class="darken-image"></div>
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 callout">
                 <h1 class="text-white fs-1">Precision Cuts, Timeless Tattoos</h1>
                 <h2 class="text-white fs-2">Unleash Your Style at Inked
                     Clippers!</h2>
@@ -59,8 +59,8 @@
     <div class="container-fluid mb-5">
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="text-white text-center my-4 ms-5"><i class="fa-solid fa-location-dot"></i>
-                    Location</h2>
+                <h2 class="text-white text-center my-4 ms-5">
+                    Location <i class="fa-solid fa-location-dot"></i></h2>
             </div>
         </div>
         <div class="row">
