--- a/core/templates/core/tattoo.html
+++ b/core/templates/core/tattoo.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
-<h1 class="text-white text-center mt-4">Prices for Piercings</h1>
 <section class="container-fluid mb-md-3 blk-bkround">
+    <h1 class="text-white text-center mb-3">Prices for Piercing Services</h1>
     <div class="row mx-md-5">
         <div class="col-md-6 py-2">
             <table class="table-borderless table-services text-center border-bottom">
