--- a/static/core/main.css
+++ b/static/core/main.css
@@ -62,6 +62,10 @@ body {
     z-index: 2;
 }
 
+.callout {
+    z-index: 1;
+}
+
 /* -------------------------------------------------------------------------------Barbershop page */
 
 .table-services {
@@ -74,8 +78,6 @@ body {
     height: 100%;
 }
 
-/* -------------------------------------------------------------------------------Tattoo page */
-.tattoo-team-img {}
 
 /* --------------------------------------------------------------------------------Register page */
 
