Add social media links

--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -135,6 +135,18 @@
                         </span><a href="mailto: InkedClipers@gmail.com">InkedClippers@gmail.com</a></p>
                 </div>
             </div>
+            <div class="row">
+                <div class="col d-flex justify-content-md-evenly justify-content-center fs-1 bg-dark">
+                    <a href="https://www.facebook.com" aria-label="Facebook" target="_blank" rel="noopener"><i
+                            class="fa-brands fa-facebook mb-4 mx-2"></i></a>
+                    <a href="https://www.twitter.com" aria-label="Twitter" target="_blank" rel="noopener"><i
+                            class="fa-brands fa-twitter mx-2"></i></a>
+                    <a href="https://www.linkedin.com/in/dylan-pigott-software-developer" aria-label="Linkedin"
+                        target="_blank" rel="noopener"><i class="fa-brands fa-linkedin mx-2"></i></a>
+                    <a href="https://github.com/DylanP400/InkedClippers" aria-label="Github" target="_blank"
+                        rel="noopener"><i class="fa-brands fa-github mx-2"></i></a>
+                </div>
+            </div>
         </div>
     </footer>
 
