Add about page with info and images about barbershop

--- a/core/templates/core/about.html
+++ b/core/templates/core/about.html
@@ -1,5 +1,155 @@
 {% extends "core/base.html"%}
+{% load static %}
 
 {% block content %}
-<h1 class="text-white">Hello About Page</h1>
+<section>
+    <div class="container-fluid p-md-5 p-1">
+        <div class="row">
+            <div class="col-md-6 fs-4">
+                <h2 class="text-white text-center fs-2 m-3 mt-md-1">Welcome to Inked Clippers, where art and style
+                    unite!
+                </h2>
+                <p class="text-center text-white">Established in 1965,
+                    we are more than just a tattoo studio and barbershop we are a living legacy of creativity and
+                    craftsmanship in Ennis. Step into our world of ink, clippers, and piercings, where hair artistry and
+                    tattoo artistry come together to create an unforgettable experience.</p>
+
+                <p class="text-center text-white">At Inked Clippers, we believe in the power of self-expression through
+                    the
+                    medium of art. Our team of talented barbers, skilled tattoo artists, and expert piercers are
+                    passionate
+                    about translating your unique style and personality into personalized masterpieces. Whether you're
+                    looking for a fresh haircut that reflects your personality, an intricate tattoo that tells your
+                    story,
+                    or a stylish piercing to accentuate your individuality, we are here to bring your vision to life.
+                </p>
+            </div>
+            <div class="col-md-6">
+                <img class="img-fluid rounded float-end d-none d-md-inline" src="{% static 'images/barberpole.jpg' %}"
+                    alt="Barber pole">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <img class="img-fluid rounded float-start" src="{% static 'images/ennis.jpg' %}" alt="Ennis Town">
+            </div>
+            <div class="col-md-6 fs-4 mt-3">
+                <p class="text-center text-white">
+                    With over 50 years of heritage, Inked Clippers has a rich history of serving the community with
+                    exceptional barbering, tattooing, and piercing services. Our journey began as "Clippers," a modest
+                    barbershop founded by the visionary artist Mike O'Brien in the heart of Ennis. Over the years, we
+                    have
+                    earned the trust and loyalty of our clients, becoming an integral part of their lives and stories.
+                </p>
+
+                <p class="text-center text-white">Today, we proudly carry on this tradition, blending the artistry of
+                    our
+                    founder with modern techniques and innovations. In 2015, the legacy of Clippers evolved into Inked
+                    Clippers when Darren returned from his global tattooing and piercing journey to merge his expertise
+                    with
+                    the established barbershop. Whether you're a seasoned client or a first-time visitor, our mission
+                    remains the same: to provide an unmatched experience that leaves you inspired and transformed.
+                    Join us at Inked Clippers, where passion, art, and community converge to
+                    redefine self-expression, one masterpiece at a time.</p>
+                <img class="img-fluid rounded float-end mr-4" src="{% static 'images/bs-chair.webp' %}"
+                    alt="Barbershop Chair">
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="container-fluid p-md-5 p-1">
+        <div class="row">
+            <div class="col-md-6 fs-4">
+                <h3 class="text-white text-center fs-2 my-3">History Of Inked Clippers</h3>
+                <p class="text-white text-center">In 1965, the visionary artist Mike O'Brien founded "Clippers," a
+                    modest barbershop that quickly gained a reputation for excellence in Ennis. Mike's dedication to his
+                    craft and commitment to fostering meaningful connections with clients laid the groundwork for what
+                    would become our enduring legacy.</p>
+
+                <p class="text-white text-center">As the years passed, the founder's two sons, Robert and Darren,
+                    embraced their artistic callings. Robert joined his father in the barbershop, adding his
+                    contemporary flair to the age-old craft. Together, they created a welcoming atmosphere that made
+                    clients feel like family.</p>
+
+                <p class="text-white text-center">Meanwhile, Darren pursued his dream of mastering tattoo artistry and
+                    piercing, embarking on a global journey to learn from the world's finest artists. His experiences
+                    abroad enriched his artistry and brought fresh perspectives to the family business.</p>
+
+                <p class="text-white text-center">In the face of adversity and the passing of our beloved founder, Mike
+                    O'Brien, after 60 years of service, Robert assumed the reins of Clippers, ensuring the continuation
+                    of our cherished legacy. In 2015, Darren returned home, ready to merge his tattooing and piercing
+                    expertise with the established barbershop, and thus, Inked Clippers was born.</p>
+
+                <p class="text-white text-center">Today, our team of barbers, tattoo artists, and piercers works in
+                    harmony, transforming every visit into an immersive journey of self-discovery and self-expression.
+                </p>
+
+                <p class="text-white text-center mb-5">Inked Clippers stands as a testament to the power of art to unite
+                    generations and tell stories that span decades. We honor the memory of our father, Mike O'Brien,
+                    while embracing the future, welcoming clients from all walks of life into our ever-evolving family
+                    in Ennis.
+                </p>
+            </div>
+            <div class="col-md-6">
+                <img class="img-fluid rounded float-end mb-3" src="{% static 'images/inked-clippers.jpg' %}"
+                    alt="Inside of the barbershop">
+                <img class="img-fluid rounded float-end my-5" src="{% static 'images/barbershop-celing-view.jpg' %}"
+                    alt="Inside the barbershop from a different angle">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <div class=" fs-4 text-center text-white">
+                    <h3 class="fs-2">Welcoming and Inclusive</h3>
+                    <p class="text-center text-white">
+                        we take pride in creating a warm and inclusive environment that embraces diversity and
+                        individuality.
+                        Our studio is a safe space where everyone, regardless of background or identity, can feel
+                        comfortable
+                        and accepted.
+                    </p>
+                    <p>As you step through our doors, you'll immediately sense the friendly and inviting atmosphere. Our
+                        team
+                        greets each client with a smile and genuine enthusiasm, making you feel like part of our
+                        creative
+                        family
+                        from the moment you arrive.
+                    </p>
+                    <p>We believe that self-expression should know no bounds, and our studio is a judgment-free zone
+                        where
+                        you
+                        can be your authentic self. Whether you're a tattoo enthusiast, a first-time client, or simply
+                        curious
+                        about our services, we treat each person with respect and kindness.
+                        Our talented barbers, tattoo artists, and piercers are not just masters of their crafts; they
+                        are
+                        also
+                        skilled communicators and empathetic listeners. They take the time to understand your
+                        preferences,
+                        answer your questions, and ensure that your experience is as enjoyable as it is memorable.
+                    </p>
+                    <p>Inked Clippers is committed to providing an experience that is as unique as you are. Our diverse
+                        team
+                        of
+                        artists brings a wide range of styles, backgrounds, and artistic influences to the table,
+                        ensuring
+                        that
+                        your vision is translated into a masterpiece that reflects your individuality.
+                    </p>
+                    <p>We celebrate the beauty of differences and the power of art to bring people together. Whether
+                        you're
+                        seeking a haircut that represents your personality, a tattoo that tells your life story, or a
+                        piercing
+                        that accentuates your style, we're here to support and guide you every step of the way.
+                        Inked Clippers stands as a symbol of unity, where creativity flourishes, and the spirit of
+                        self-expression thrives. Join us in celebrating the beauty of diversity, one artistic journey at
+                        a
+                        time.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock content %}
