fixed lighthouse error

--- a/core/templates/core/barbers.html
+++ b/core/templates/core/barbers.html
@@ -43,7 +43,7 @@
                     <div class="card-header text-center bg-dark text-white fw-bold">{{ member.name }}</div>
                     <img src="{{ member.image.url }}" class="" alt="...">
                     <div class="card-body bg-dark">
-                        <h4 class="text-white text-center fs-6"><u>{{ member.role }}</u></h4>
+                        <p class="text-white text-center fs-6"><u>{{ member.role }}</u></p>
                         <p class="card-text text-white fs-6 text-center">{{ member.bio }}</p>
                     </div>
                 </div>
