Fixed background-colour bug

--- a/core/templates/core/barbers.html
+++ b/core/templates/core/barbers.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 {% block content %}
-<section class="container-fluid mb-5 blk-bkround">
+<section class="container-fluid mb-5">
     <div class="row">
-        <div class="col">
+        <div class="col-12 blk-bkround">
             <h1 class="text-white text-center my-3">Prices For Barber Services</h1>
-            <table class="table-borderless table-services text-center">
+            <table class="table-borderless table-services text-center blk-bkround">
                 <thead>
                     <tr>
                         <th scope="col">HAIR &amp; SHAVE</th>
