Add container to logout page & fix typo in login page

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container bg-dark px-3 py-2 my-3d">
+<div class="container bg-dark px-3 py-2 my-3">
     <form method="POST">
         {% csrf_token %}
         <!--csrf token is added to give security to django forms-->
